--- a/src/index.css
+++ b/src/index.css
@@ -1,25 +1,17 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.pokemon {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  flex: 1 1 auto;
-  min-width: 25%;
-  margin: 10px 10px;
-  border: 1px gray solid;
-  border-radius: 10px;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    monospace;
 }
 
-.pokedex {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 10px 10px;
-}
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech&display=swap');
